Forgot one instance of more concise toList syntax